fix: update footer background color for improved visibility

--- a/scss/components-styles/Footer.scss
+++ b/scss/components-styles/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: rgba(128, 128, 128, 0.706);
+    background-color: rgba(128, 128, 128, 0.778);
     color: whitesmoke;
     text-align: center;
     padding: 1rem;
